Retia.Cuda/CApi.h

#pragma once

#include "LayeredNet.h"
#include "RMSPropOptimizer.h"
#include "LinearLayer.h"
#include "GruLayer.h"
#include "SoftmaxLayer.h"

// TODO: _Crossplatform exports
#define GPUAPI extern "C" __declspec(dllexport)
#define _VOID void _cdecl

/*
 * Optimizers
 */
GPUAPI RMSPropOptimizer* _cdecl CreateRMSPropOptimizer(float learningRate, float momentum, float decayRate, float weightDecay);
GPUAPI _VOID DestroyOptimizer(OptimizerBase *optimizer);
GPUAPI _VOID SetLearningRate(OptimizerBase *optimizer, float learningRate);

/*
 * Network
 */
GPUAPI LayeredNet* _cdecl CreateLayeredNetwork(int inputSize, int outputSize, int batchSize, int seqLen);
GPUAPI _VOID DestroyLayeredNetwork(LayeredNet *network);
GPUAPI _VOID SetNetworkOptimizer(LayeredNet *network, OptimizerBase* optimizer);
GPUAPI _VOID AddNetworkLayer(LayeredNet *network, LayerBase *layer);

/*
 * Layers
 */
GPUAPI LinearLayer* _cdecl CreateLinearLayer(int inputSize, int outSize, int batchSize, int seqLen);
GPUAPI GruLayer* _cdecl CreateGruLayer(int inputSize, int hSize, int layers, int batchSize, int seqLen);
GPUAPI SoftmaxLayer* _cdecl CreateSoftmaxLayer(int inSize, int batchSize, int seqLen);

/*
 * State transfer
 */
struct MatrixDefinition
{
	int Rows;
	int Columns;
	int SeqLength;
	float *Pointer;
};

struct WeightDefinition
{
	int Rows;
	int Columns;
	int SeqLength;
	float *WeightPtr, *GradPtr, *Cache1Ptr, *Cache2Ptr, *CacheMPtr;
};

GPUAPI _VOID TransferLayerStatesToDevice(LayerBase *layer, WeightDefinition *weights, int count);
GPUAPI _VOID TransferLayerStatesToHost(LayerBase *layer, WeightDefinition *weights, int count);

/*
 * Training
 */
GPUAPI double _cdecl TrainSequence(LayeredNet *net, MatrixDefinition *inputs, MatrixDefinition *targets, int count);

/*
* Tests
*/
GPUAPI double _cdecl TestCrossEntropyErrorCpu(MatrixDefinition m1, MatrixDefinition m2);
GPUAPI double _cdecl TestCrossEntropyErrorGpu(MatrixDefinition m1, MatrixDefinition m2);
GPUAPI _VOID TestCrossEntropyBackpropCpu(MatrixDefinition m1, MatrixDefinition m2, MatrixDefinition result);
GPUAPI _VOID TestCrossEntropyBackpropGpu(MatrixDefinition m1, MatrixDefinition m2, MatrixDefinition result);
GPUAPI _VOID TestRMSPropUpdateCpu(MatrixDefinition weight, MatrixDefinition grad, MatrixDefinition cache1,
	MatrixDefinition cache2, MatrixDefinition cacheM, float learningRate, float decayRate, float momentum, float weightDecay);
GPUAPI _VOID TestRMSPropUpdateGpu(MatrixDefinition weight, MatrixDefinition grad, MatrixDefinition cache1,
	MatrixDefinition cache2, MatrixDefinition cacheM, float learningRate, float decayRate, float momentum, float weightDecay);
GPUAPI _VOID TestClampMatrixCpu(MatrixDefinition matrix, float threshold);
GPUAPI _VOID TestClampMatrixGpu(MatrixDefinition matrix, float threshold);
GPUAPI _VOID TestMatrixTransferCpu(MatrixDefinition matrix);
GPUAPI _VOID TestMatrixTransferGpu(MatrixDefinition matrix);

/*
 * Helpers
 */
std::vector<WeightSyncContainer*> GetWeightSyncContainers(WeightDefinition* weights, int count);
void DestroyWeightSyncContainers(std::vector<WeightSyncContainer*>& containers);
std::vector<HostMatrixPtr*> GetMatrixPointers(MatrixDefinition *matrices, int matrixCount);
void DestroyMatrixPointers(std::vector<HostMatrixPtr*>& ptrs);